--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/print.js": {
-      "runtime": "vercel-node@4.0.0",
+      "runtime": "@vercel/node",
       "maxDuration": 10,
       "memory": 256
     }
